--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -12,9 +12,9 @@
         </ul>
     </div>
     <app-admin-about id="adminAbout"></app-admin-about>
+    <app-admin-projects id="adminProjects"></app-admin-projects>
     <app-admin-works id="adminWorks"></app-admin-works>
-    <app-admin-projects id="adminProjects">
-        <app-upload-image></app-upload-image>
-    </app-admin-projects>
-    <app-admin-news id="adminNews"></app-admin-news>
+    <app-admin-news id="adminNews">
+
+    </app-admin-news>
 </div>
