--- a/src/app/components/upload-file/upload-file.component.html
+++ b/src/app/components/upload-file/upload-file.component.html
@@ -1,9 +1,14 @@
 <ngx-dropzone
-    [accept]="'.pdf, .zip, .rar'"
-    [multiple]="false"
+    accept="{{fileAccept}}"
+    multiple="false"
     (change)="onSelect($event)">
-    <ngx-dropzone-label>Drop it, baby!</ngx-dropzone-label>
+    <ngx-dropzone-label>Кидай сюди або клікай і вибирай!</ngx-dropzone-label>
     <ngx-dropzone-preview *ngFor="let f of files" [removable]="true" (removed)="onRemove(f)">
         <ngx-dropzone-label>{{ f.name }} ({{ f.type }})</ngx-dropzone-label>
     </ngx-dropzone-preview>
 </ngx-dropzone>
+<div class="progress" *ngIf="uploadProgress$ | async as progress">
+    <div class="progress-bar progress-bar-animated" id="progress" [ngStyle]="{ 'width': progress + '%' }"></div>
+</div>
+<button mat-stroked-button (click)="upload()">Завантажити</button>
+
