--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -1,6 +1,6 @@
 #contact {
     #contactBackground {
-        background-color: black;
+        background-image: url('../../../assets/contactBack.JPG');
     }
     #contactInfo {
         background-color: lightgray;
