--- a/src/app/pages/works/works.component.scss
+++ b/src/app/pages/works/works.component.scss
@@ -1,7 +1,7 @@
 #works {
     margin-bottom: 0;
     #worksBackground {
-        background-image: url('../../../assets/worksBack.jpg');
+        background-image: url('../../../assets/worksBack4.png');
     }
     #worksNav {
         background-color: white;
