--- a/src/app/admin/admin-works/admin-works.component.html
+++ b/src/app/admin/admin-works/admin-works.component.html
@@ -3,62 +3,62 @@
     <div id="piecesTable">
         <table mat-table [dataSource]="works" class="full-width">
             <ng-container matColumnDef="position">
-                <th mat-header-cell *matHeaderCellDef>#</th>
-                <td mat-cell *matCellDef="let piece; let i = index" class="worksTd"> {{i}}</td>
+                <th mat-header-cell *matHeaderCellDef class="normalTh">#</th>
+                <td mat-cell *matCellDef="let piece; let i = index" class="paddingTd"> {{i}}</td>
             </ng-container>
             <ng-container matColumnDef="title">
-                <th mat-header-cell *matHeaderCellDef>Назва</th>
-                <td mat-cell *matCellDef="let piece" class="worksTd">{{piece.title}}</td>
+                <th mat-header-cell *matHeaderCellDef class="normalTh">Назва</th>
+                <td mat-cell *matCellDef="let piece" class="paddingTd">{{piece.title}}</td>
             </ng-container>
             <ng-container matColumnDef="instr">
-                <th mat-header-cell *matHeaderCellDef>Склад</th>
-                <td mat-cell *matCellDef="let piece" class="worksTd">{{piece.instr}}</td>
+                <th mat-header-cell *matHeaderCellDef class="normalTh">Склад</th>
+                <td mat-cell *matCellDef="let piece" class="narrowTd">{{piece.instr}}</td>
             </ng-container>
             <ng-container matColumnDef="texts">
-                <th mat-header-cell *matHeaderCellDef>Дод текст (слова, колаборація, etc)</th>
-                <td mat-cell *matCellDef="let piece" class="worksTd">{{piece.texts}}</td>
+                <th mat-header-cell *matHeaderCellDef class="normalTh">Дод текст (слова, колаборація, etc)</th>
+                <td mat-cell *matCellDef="let piece" class="narrowTd">{{piece.texts}}</td>
             </ng-container>
             <ng-container matColumnDef="order">
-                <th mat-header-cell *matHeaderCellDef>Зомовлення</th>
-                <td mat-cell *matCellDef="let piece" class="worksTd">{{piece.order}}</td>
+                <th mat-header-cell *matHeaderCellDef class="normalTh">Зомовлення</th>
+                <td mat-cell *matCellDef="let piece" class="narrowTd">{{piece.order}}</td>
             </ng-container>
             <ng-container matColumnDef="duration">
-                <th mat-header-cell *matHeaderCellDef>Тривалість</th>
-                <td mat-cell *matCellDef="let piece" class="worksTd">{{piece.duration}}</td>
+                <th mat-header-cell *matHeaderCellDef class="normalTh">Тривалість</th>
+                <td mat-cell *matCellDef="let piece" class="paddingTd">{{piece.duration}}</td>
             </ng-container>
             <ng-container matColumnDef="year">
-                <th mat-header-cell *matHeaderCellDef>Рік</th>
-                <td mat-cell *matCellDef="let piece" class="worksTd">{{piece.year}}</td>
+                <th mat-header-cell *matHeaderCellDef class="normalTh">Рік</th>
+                <td mat-cell *matCellDef="let piece" class="paddingTd">{{piece.year}}</td>
             </ng-container>
             <ng-container matColumnDef="audio">
-                <th mat-header-cell *matHeaderCellDef>Audio</th>
+                <th mat-header-cell *matHeaderCellDef class="normalTh">Audio</th>
                 <td mat-cell *matCellDef="let piece" class="narrowTd">{{piece.audioUrl}}</td>
             </ng-container>
             <ng-container matColumnDef="video">
-                <th mat-header-cell *matHeaderCellDef>Video</th>
+                <th mat-header-cell *matHeaderCellDef class="normalTh">Video</th>
                 <td mat-cell *matCellDef="let piece" class="narrowTd">{{piece.videoUrl}}</td>
             </ng-container>
             <ng-container matColumnDef="pdf">
-                <th mat-header-cell *matHeaderCellDef>PDF</th>
+                <th mat-header-cell *matHeaderCellDef class="normalTh">PDF</th>
                 <td mat-cell *matCellDef="let piece" class="narrowTd">{{piece.pdfUrl}}</td>
             </ng-container>
             <ng-container matColumnDef="chapter">
-                <th mat-header-cell *matHeaderCellDef>Розділ</th>
-                <td mat-cell *matCellDef="let piece" class="worksTd">{{piece.chapter}}</td>
+                <th mat-header-cell *matHeaderCellDef class="normalTh">Розділ</th>
+                <td mat-cell *matCellDef="let piece" class="paddingTd">{{piece.chapter}}</td>
             </ng-container>
             <ng-container matColumnDef="selected">
-                <th mat-header-cell *matHeaderCellDef>Вибраний</th>
-                <td mat-cell *matCellDef="let piece" class="worksTd">{{piece.selected}}</td>
+                <th mat-header-cell *matHeaderCellDef class="normalTh">Вибраний</th>
+                <td mat-cell *matCellDef="let piece" class="narrowTd">{{piece.selected}}</td>
             </ng-container>
             <ng-container matColumnDef="edit">
-                <th mat-header-cell *matHeaderCellDef>Ред</th>
-                <td mat-cell *matCellDef="let piece" class="worksTd">
+                <th mat-header-cell *matHeaderCellDef class="normalTh">Ред</th>
+                <td mat-cell *matCellDef="let piece" class="narrowTd">
                     <button mat-mini-fab color="accent" (click)="editPiece(piece)">Ред</button>
                 </td>
             </ng-container>
             <ng-container matColumnDef="delete">
-                <th mat-header-cell *matHeaderCellDef>Видал</th>
-                <td mat-cell *matCellDef="let piece" class="worksTd">
+                <th mat-header-cell *matHeaderCellDef class="normalTh">Видал</th>
+                <td mat-cell *matCellDef="let piece" class="narrowTd">
                     <button mat-mini-fab color="warn" (click)="deletePiece(piece)">Вид</button>
                 </td>
             </ng-container>
@@ -131,12 +131,11 @@
             </mat-form-field>
             <mat-form-field>
                 <mat-label class="full-width">Вибери розділ</mat-label>
-                <mat-select id="pieceChapter" name="pieceChapter" [(ngModel)]="piece.chapter" #chapterSelect>
+                <mat-select id="pieceChapter" name="pieceChapter" [(ngModel)]="piece.chapter">
                     <mat-option *ngFor="let chapter of chapters" [value]="chapter">
                     {{chapter}}
                     </mat-option>
                 </mat-select>
-                <mat-error *ngIf="chapterSelect.errorState && chapter.hasError('required')">Вибери розділ!</mat-error>
             </mat-form-field>
             <section>
                 <mat-checkbox id="pieceSelected" name="pieceSelected" [(ngModel)]="piece.selected">Вибрані</mat-checkbox>
