--- a/src/app/components/title-opacity/title-opacity.component.scss
+++ b/src/app/components/title-opacity/title-opacity.component.scss
@@ -4,3 +4,8 @@
     color: white;
     margin-top: -100px;
 }
+@media (max-width: 600px) {
+    #textOnBackground {
+        font-size: 50px;
+    }
+}
