--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -14,7 +14,7 @@
             padding: 20px;
         }
         p {
-            margin: 20px 30px;
+            padding: 20px 50px;
             text-align: justify;
         }
         #aboutPressKit {
