--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -3,11 +3,49 @@
         background-image: url('../../../assets/homeBack.JPG');
     }
     #homeNews {
-        height: 70vh;
         background-color: white;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-
+        text-align: center;
+        padding: 50px 0;
+        h3 {
+            text-transform: uppercase;
+            padding-bottom: 50px;
+        }
+        #homeNewsInner {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            .homeNewsOne {
+                width: 250px;
+                margin: 0 25px 25px 25px;
+                img {
+                    width: 100%;
+                    height: 200px;
+                    margin-bottom: 25px;
+                }
+                h6 {
+                    a {
+                        color: brown;
+                        text-transform: uppercase;
+                    }
+                    a:hover {
+                        color: white;
+                        background-color: black;
+                    }
+                }
+                .homeNewsOneInfo {
+                    text-align: justify;
+                }
+            }
+        }
+        button:hover {
+            background-color: black;
+            transition: background-color, 1s;
+            color: white;
+        }
     }
 }
