--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,10 +19,6 @@ footer {
     text-align: center;
     background-color: black;
 }
-
-
-
-
 a {
     color: black;
 }
@@ -40,7 +36,7 @@ a:visited {
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: top;
     z-index: -2;
     display: flex;
     justify-content: center;
@@ -49,4 +45,20 @@ a:visited {
 }
 .full-width {
     width: 100%;
+}
+.normalTh {
+    font-size: 9px;
+    border-right: 1px solid grey;
+}
+.paddingTd {
+    font-size: 9px;
+    padding-right: 5px;
+    border-right: 1px solid grey;
+}
+.narrowTd {
+    font-size: 9px;
+    max-width: 80px;
+    overflow: scroll;
+    padding-right: 5px;
+    border-right: 1px solid grey;
 }
